--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,12 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+Data/tracking_week_1.csv
+Data/tracking_week_2.csv
+Data/tracking_week_3.csv
+Data/tracking_week_4.csv
+Data/tracking_week_6.csv
+Data/tracking_week_5.csv
+Data/tracking_week_7.csv
+Data/tracking_week_8.csv
+Data/tracking_week_9.csv
